--- a/SASS/intro/index.html
+++ b/SASS/intro/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <button class="btn btn-primary">Click</button>
+    <nav>
+        <div class="row">
+            <div class="col6">
+                <ul class="navigation">
+                    <li><a href="javascript:;">home</a></li>
+                    <li><a href="javascript:;">about</a></li>
+                    <li><a href="javascript:;">gallary</a></li>
+                    <li><a href="javascript:;">contact</a></li>
+                </ul>
+            </div>
+            <div class="col6 text-right">
+                <div class="buttons">
+                    <a href="javascript:;" class="btn-primary">Sign In</a>
+                    <a href="javascript:;" class="btn-secondary">Sign UP</a>
+                </div>
+            </div>
+        </div>
+
+
+    </nav>
 </body>
+
 </html>
