--- a/JS/http/fetch/index.html
+++ b/JS/http/fetch/index.html
@@ -5,12 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
   </head>
   <body>
     <h2 class="bg-primary text-white p-4">HTTP Call</h2>
@@ -19,7 +15,7 @@
         <div class="col-sm-6 offset-sm-3">
           <div class="card">
             <div class="card-body">
-              <form id="postsForm">
+              <form id="postsForm" action="/">
                 <div class="form-group">
                   <label for="title"><strong>Title</strong></label>
                   <input type="text" id="title" class="form-control" required/>
@@ -40,7 +36,7 @@
           </div>
           <hr />
           <div id="data">
-
+               
           </div>
         </div>
       </div>
@@ -48,3 +44,18 @@
     <script src="./assets/js/app.js"></script>
   </body>
 </html>
+
+<!--
+   1 symentic html tags  
+   2 It supports mutimedia
+   3 HTML5 gives some browser APIS
+       
+        fetch API 
+        drag and drop
+        geolocation
+        clipboard
+        file
+        forms
+        Web stroges 
+
+-->
